# IBM-Bob-hackathon-team-avenger

./: .env.example  .gitignore  ARCHITECTURE.md  FEATURES.md  FINAL_STATUS.md  HACKATHON_READINESS.md  INTEGRATION_COMPLETE.md  LICENSE  Makefile  README.md  README_MOBILE_APP.md  SUBMISSION.md  UI_ENHANCEMENTS_COMPLETE.md  Untitled (1).txt  Untitled (2).txt  Untitled (3).txt  Untitled (4).txt  Untitled.txt  claude.md  cortex-deck-2 copy.html  cortex-deck.html  cortex-screens.html  docker-compose.yml  fix-firewall.ps1  requirements-minimal.txt  start-cortex-quick.bat  start-cortex.bat  start.bat  start.ps1  team_info.json  theme.md
.bob/: custom_modes.yaml  mcp 2.json  mcp.json
bob/: INSTALL.md  MCP_CONFIG.md  custom_modes.yaml.example
cortex-api/: Dockerfile  README.md  pyproject.toml
cortex-api/cortex_api/: __init__.py  config.py  embeddings.py  mcp_server.py  retrieval.py  server.py  storage.py  tools.py
cortex-bot/: Dockerfile  README.md  pyproject.toml  requirements.txt
cortex-bot/cortex_bot/: __init__.py  __main__.py  config.py  handlers.py  main.py  transcription.py
cortex-mobile/: COMPLETE_IMPLEMENTATION_PACKAGE.md  FEATURE_COMPARISON.md  IMPLEMENTATION_GUIDE.md  MOBILE_SETUP.md  QR_CONNECTION_TROUBLESHOOTING.md  START_HERE.md  app.json  fix-expo-connection.ps1  package-lock.json  package.json  setup-firewall.ps1
cortex-web/: README.md  index.html
docs/: AGENT_PROMPT.md  BOB_USAGE.md  CODEBASE_UNDERSTANDING.md  CONTRACTS.md  DEMO_RECORDING.md  DEMO_SCRIPT.md  FEATURES.md  HACKATHON_REQUIREMENTS.md  HANDOFF.md  IDEA.md  LICENSE_AUDIT.md  PLAN.md  (+9 more)
(+193 files in other folders)
