[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cortex-api"
version = "0.1.0"
description = "Cortex MCP server + REST API for the IBM Bob Dev Day Hackathon"
requires-python = ">=3.11"
license = { file = "../LICENSE" }
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
include = ["cortex_api*"]
