[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cortex-bot"
version = "0.1.0"
description = "Cortex Telegram bot — mobile capture surface"
requires-python = ">=3.11"
license = { file = "../LICENSE" }
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
include = ["cortex_bot*"]
